--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "App\\View\\Components\\authsessionstatus":"app/View/Components/auth-session-status.php",
+            "App\\View\\Components\\authvalidationerrors":"app/View/Components/auth-validation-errors.php"
         },
         "files": [
             "app/Helpers/helper.php"
