--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "App\\View\\Components\\authsessionstatus\\":"app/View/Components/auth-session-status.php",
-            "App\\View\\Components\\authvalidationerrors\\":"app/View/Components/auth-validation-errors.php"
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "app/Helpers/helper.php"
